html/css/pedals.css
/* ... */
/* ADDRESSING BUTTON */
.mod-pedal-settings .mod-knob .mod-address,
.mod-pedal-settings .mod-enumerated .mod-address,
.mod-pedal-settings .mod-switch .mod-address,
.mod-pedal-settings .mod-slider .mod-address {
    background-image:url(../img/icons/36/faders.png);
    background-position:center center;
    background-repeat:no-repeat;
    background-size: 36px;
    bottom:0;
    cursor:pointer;
    height:36px;
    position:absolute;
    right:0;
    width:36px;
    transition: all 0.33s;
}

.mod-pedal-settings .mod-knob .mod-address:hover,
.mod-pedal-settings .mod-enumerated .mod-address:hover,
.mod-pedal-settings .mod-switch .mod-address:hover,
.mod-pedal-settings .mod-slider .mod-address:hover {
    background-color:#883996;
}


/* ADDRESSING POP-UP */
.mod-pedal-settings-address {
    background:rgba(0,0,0,.75);
    bottom:0;
    left:0;
    position:absolute;
    right:0;
    top:0;
    z-index:1000;
}

.mod-pedal-settings-address .mod-box {
    background:white;
    left:50%;
    margin:-150px -193px;
    padding:18px;
    position:absolute;
    top:40%;
    width:450px;
    max-height: 70%;
    overflow-y: auto;
    overflow-x: hidden;
}

.mod-pedal-settings-address h1 {
    font-size:18px;
    line-height:1;
    margin:0 0 18px 0;
    padding:0;
    text-transform:uppercase;
}

.mod-pedal-settings-address label {
    display:inline-block;
    float:left;
    line-height:2;
    width:96px;
}

.mod-pedal-settings-address .mod-controls {
    float:left;
}

.mod-pedal-settings-address input[type="text"] {
    width:190px;
}

.mod-pedal-settings-address .mod-value input[type="number"] {
    width:190px;
}

.mod-pedal-settings-address .mod-range input[type="number"] {
    width: 41% !important;
    float: left;
}
.mod-pedal-settings-address .mod-range input[type="number"][name="max"] {
    width: 47% !important;
}
.mod-pedal-settings-address .mod-range span {
    width: 12%;
    text-align: center;
    float: left;
    line-height: 2em;
}

.mod-pedal-settings-address select {
    width:202px;
}

